--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 .qodo
+# Ignore Visual Studio Code settings
+.vscode/
+
+# Ignore Python cache files
+__pycache__/
+
+# Ignore virtual environment folder
+venv/
+env/
