--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,76 @@
 absl-py==2.2.2
+alembic==1.16.1
 astunparse==1.6.3
+attrs==25.3.0
 blinker==1.9.0
+cachetools==5.5.2
 certifi==2025.4.26
+cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.1.8
+contourpy==1.3.2
+cycler==0.12.1
 Flask==3.1.0
+Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 flatbuffers==25.2.10
+fonttools==4.58.0
 gast==0.6.0
+google-auth==2.40.1
+google-auth-oauthlib==1.2.2
 google-pasta==0.2.0
 grpcio==1.71.0
 h5py==3.13.0
 idna==3.10
 itsdangerous==2.2.0
+jax==0.6.1
+jaxlib==0.6.1
 Jinja2==3.1.6
-keras==3.9.2
+keras==3.10.0
+kiwisolver==1.4.8
 libclang==18.1.1
+Mako==1.3.10
 Markdown==3.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+matplotlib==3.10.3
 mdurl==0.1.2
+mediapipe==0.10.21
 ml_dtypes==0.5.1
 namex==0.0.9
-numpy==2.1.3
+numpy==1.26.4
+oauthlib==3.2.2
+opencv-contrib-python==4.11.0.86
+opencv-python==4.11.0.86
 opt_einsum==3.4.0
 optree==0.15.0
 packaging==25.0
-protobuf==5.29.4
+pillow==11.2.1
+protobuf==4.25.7
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.22
 Pygments==2.19.1
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
 requests==2.32.3
+requests-oauthlib==2.0.0
 rich==14.0.0
+rsa==4.9.1
+scipy==1.15.3
+sentencepiece==0.2.0
 six==1.17.0
+sounddevice==0.5.2
 SQLAlchemy==2.0.38
 tensorboard==2.19.0
 tensorboard-data-server==0.7.2
 tensorflow==2.19.0
+tensorflow-estimator==2.15.0
 tensorflow-io-gcs-filesystem==0.37.1
+tensorflow-macos==2.15.0
 termcolor==3.1.0
+tomli==2.2.1
 typing_extensions==4.12.2
 urllib3==2.4.0
 Werkzeug==3.1.3
-wrapt==1.17.2
+wrapt==1.14.1
