--- a/requirements.txt
+++ b/requirements.txt
@@ -73,3 +73,6 @@ typing_extensions==4.12.2
 urllib3==2.4.0
 Werkzeug==3.1.3
 wrapt==1.14.1
+email-validator==2.2.0
+gunicorn==22.0.0
+Flask-Mail==0.10.0
